--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -35,4 +35,4 @@ post_date_prefix: 'Written on'
 
 cover_title: 'We are Humble Data'
 
-cover_description: 'Aim to increase inclusitivity and provide a safe community in Python and Data Science, we organise free workshops for people who are out side of the main stream in the data science/ tech industry. We encourage pass participants to be mentors and organise the same workshop themselves. We build a community where people will help each other and learn from each other. Remember to stay humble!'
+cover_description: 'Aim to increase inclusivity and provide a safe community in Python and Data Science, we organise free workshops for people who are outside of the mainstream in the data science/ tech industry. We encourage past participants to be mentors and organise the same workshop themselves. We build a community where people will help each other and learn from each other. Remember to stay humble!'
