Adding useful recources

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -10,6 +10,7 @@ menu:
 - {name: 'Upcoming Events', folder: 'pages', file: 'up-coming.html'}
 - {name: 'Past Events', folder: 'pages', file: 'past-event.html'}
 - {name: 'News', folder: 'pages', file: 'news.html'}
+- {name: 'Resources', folder: 'pages', file: 'resources.html'}
 - {name: 'About', folder: 'pages', file: 'about.html'}
 - {name: 'Contact', folder: 'pages', file: 'contact.html'}
 
