--- a/_data/team.yml
+++ b/_data/team.yml
@@ -15,7 +15,7 @@
   name: "Cheuk"
   surname: "Ho"
   title: "Oragnizer"
-  thumbnailUrl: CheukHo.jpg
+  thumbnailUrl: CheukHo.JPG
   team: true
   ribbon:
     - {abbr: "", title: ""}
