--- a/_data/team.yml
+++ b/_data/team.yml
@@ -123,7 +123,7 @@
   name: "Lais"
   surname: "Carvalho"
   title: "Mentor"
-  thumbnailUrl: LaísCarvalho.jpg
+  thumbnailUrl: LaisCarvalho.jpg
   team: true
   ribbon:
     - {abbr: "", title: ""}
@@ -171,7 +171,7 @@
   name: "Tomás Müller"
   surname: "Bravo"
   title: "Mentor"
-  thumbnailUrl: TomásMüllerBravo.jpeg
+  thumbnailUrl: TomasMullerBravo.jpeg
   team: true
   ribbon:
     - {abbr: "", title: ""}
