--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -37,4 +37,4 @@ post_date_prefix: 'Written on'
 
 cover_title: 'We are Humble Data'
 
-cover_description: 'Aim to increase inclusivity and provide a safe community in Python and Data Science, we organise free workshops for people who are outside of the mainstream in the data science/ tech industry. We encourage past participants to be mentors and organise the same workshop themselves. We build a community where people will help each other and learn from each other. Remember to stay humble!'
+cover_description: 'We aim to increase inclusivity and provide a safe community for Python and Data Science. We organise free workshops for people who are outside of the mainstream in the data science and tech industry. We encourage past participants to become mentors and even organise their own workshop one day. We are building a community where people can help and learn from each other. Remember to stay humble!'
